--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @theme {
     --breakpoint-xs-max: 576px;  /* Max width for xs (phones and smaller devices) */
     --breakpoint-sm: 576px;
@@ -7,4 +9,11 @@
     --breakpoint-lg: 1024px;
     --breakpoint-xl: 1200px;
     --color-primary: #008000;
+    --color-secondary: #F6F3FA;
+    --color-darkColor: #151513;
+    --color-darkColorSec: #1E1E1E;
+    --color-border: #c0c0c0;
+    --color-borderDark: #8888883B;
+    --color-textDark: #808080;
+    --color-bgColorLight: #F5F5F5;
 }
