--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 @import "tailwindcss";
+@import url('./assets/fonts/index.css');
+
+* {
+  font-family: "Albert Sans", sans-serif;
+}
 
 @custom-variant dark (&:where(.dark, .dark *));
 
@@ -31,12 +36,12 @@
     width: 0.4rem;
 }
 
-.container {
-    @apply grid gap-4;
+.wholeContainer {
+    @apply grid gap-4 w-full;
 }
 
 .form-container {
-    @apply border border-border dark:border-borderDark bg-bgColorLight dark:bg-darkColorSec p-5 rounded-lg text-base;
+    @apply border border-border dark:border-borderDark bg-bgColorLight dark:bg-darkColor p-5 rounded-lg text-base;
 }
 
 .box-container2 {
@@ -52,7 +57,7 @@
 }
 
 .tableContainer {
-    @apply grid gap-2 p-4 border-1 border-border rounded-lg bg-bgColorLight dark:bg-darkColorSec dark:border-borderDark;
+    @apply grid gap-2 p-4 border-1 border-border rounded-lg bg-bgColorLight dark:bg-darkColor dark:border-borderDark;
 }
 
 .tableContainerRow {
